styles/Home.module.scss
.firstSectionCircle {
  position: absolute;
  width: 1200px;
  min-height: 100vh;
  left: 0;
  top: 0;
  z-index: -1;
  background-image: url(../images/blur-effects/SectionOne.png);
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
  mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
}

.firstSectionContainer {
  margin-top: 12rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  @media only screen and (max-width: 940px) {
    align-items: flex-start;
  }
}

.secondSectionContainer {
  max-width: var(--wide-max-width);
  width: 100%;
  margin-top: 19.5rem;
  & .secondSectionText {
    max-width: 52rem;
    @media screen and (min-width: 940px) {
      padding-left: 3rem;
    }
    & > * {
      text-align: left;
    }
  }
}

.thirdSectionContainer {
  margin-top: 12rem;
  max-width: var(--main-max-width);
  width: 100%;
  text-align: center;
  min-height: 100rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20rem; // remove this later
}

.thirdSectionBlur {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  z-index: -1;
}

